6 October 2015: Wouter
	- Patch for preliminary Mac OSX 10.11 support (from Philip Paeps).
	- Move plists into uidir on OSX (/usr/local/share), and set usr/local
	  in makedist for OSX.

1 October 2015: Wouter
	- default keysize for control is 3072 on windows.

31 August 2015: Wouter
	- Changed windows setup compression to be more transparent.

16 July 2015: Wouter
	- Patches from Tomas Hozza for systemd service files:
	  Set PIDFile in the dnssec-triggerd.service file.
	  Remove restorecon call in dnssec-triggerd-keygen.service.

14 July 2015: Wouter
	- Patches from Tomas Hozza for dnssec-trigger-script:
	  Use one import on one line as defined by PEP8.
	  Use path to DEVNULL from os module.
	  Move the main functionality into main() function to enable testing.
	  Use existing API in NM for distinguishing VPN connections.
	  Construct NMClient as advised by the documentation.
	  Forbid Python from searching local dirs and using env variables.
	  Set low max negative cache TTL to prevent possible user issues.
	  Send SIGHUP to NM if it is new enough instead of restarting it.
	  Set the required version in GI before importing NMClient.

13 July 2015: Wouter
	- Fix #618: create sha1 and sha256 hashes for created binaries,
	  fixed in makedist.sh.

10 July 2015: Wouter
	- Renamed 'open resolvers' to 'relay resolvers' in the explanatory
	  text what dnssec-trigger is doing.  Resolvers from DHCP can also
	  be public resolvers, so the term relay resolver is used for an
	  open resolver that performs transport layer adjustment.

8 April 2015: Wouter
	- Patches from Tomas Hozza for dnssec-trigger-script:
	  Add newlines between classes to conform with PEP-8 and
	   increase readability.
	  Add/remove local zones in Unbound when configuring
	   reverse addr forward zones.

7 April 2015: Wouter
	- Patch from Tomas Hozza:
		dnssec-trigger-script: Don't configure RFC1918 zones
		if there are no global forwarders.

12 March 2015: Wouter
	- Patches from Tomas Hozza (7):